Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                         </div>
                     </div>
                     <div class="portfolio-info">
-                        <span class="portfolio-tech">Solidity, Ethereum, Web3.js, React</span>
+                        <span class="portfolio-tech">Solidity, Ethereum, Web3.js, React   <br>    (Coming Soon)</span>
                     </div>
                 </div>
 
